tests/fixtures/invalid/pow_set_int.py
# Cannot call pow() with Set[int], Int
x = pow({1, 2, 3}, 1)
